common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
#  annotations:
#	  nginx.ingress.kubernetes.io/rewrite-target: /&2
spec:
  # 어떤 Ingress Controller를 사용할지 명시 (Kubernetes v1.19+ 권장)
  ingressClassName: nginx
  rules:
  # 1. 하나의 도메인(Host)에 대한 규칙 설정
  - host: sookmissing.com 
    http:
      paths:
      # 2. /api/ 로 시작하는 경로에 대한 규칙
      - path: /analyze-message
        pathType: Prefix # Prefix: 해당 경로로 시작하는 모든 요청을 매칭
        backend:
          service:
            name: api-service # API 서비스 이름
            port:
              number: 8000 # API 서비스 포트
      
      # 3. 그 외 모든 경로(/)에 대한 기본 규칙 (프론트엔드)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service # 프론트엔드 서비스 이름
            port:
              number: 80 # 프론트엔드 서비스 포트
